# otherthing-node

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  README.md  index.html  install.ps1  install.sh  keys.json  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
contracts/: README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/artifacts/contracts/NodeRegistry.sol/: NodeRegistry.dbg.json  NodeRegistry.json
contracts/artifacts/contracts/OTT.sol/: OTT.dbg.json  OTT.json
contracts/artifacts/contracts/TaskEscrow.sol/: TaskEscrow.json
contracts/artifacts/contracts/WorkspaceRegistry.sol/: WorkspaceRegistry.dbg.json  WorkspaceRegistry.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: NodeRegistry.sol  OTT.sol  TaskEscrow.sol  WorkspaceRegistry.sol
contracts/scripts/: deploy-registry.ts  deploy-workspace-registry.ts  deploy.ts  mint.ts  test-register.ts  test-workspace.ts
contracts/test/: OTT.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: NodeRegistry.ts  OTT.ts  TaskEscrow.ts  WorkspaceRegistry.ts  index.ts
contracts/typechain-types/factories/contracts/: NodeRegistry__factory.ts  OTT__factory.ts  TaskEscrow__factory.ts  index.ts  (+1 more)
docs/: ARCHITECTURE.md  GTM.md  ONE-PAGER.md  PITCH-DECK.md  TOKENOMICS.md  ZLAYER_INTEGRATION.md
src/: api-server.ts  api.rs  config.rs  electron-compat.ts  executor.rs  hardware.rs  hardware.ts  index.html  ipfs-manager.ts  main.rs  main.ts  node-service.ts  ollama-manager.ts  orchestrator.rs  preload.ts  sandbox-manager.ts  server.ts  sidecar.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/api/: mod.rs  routes.rs  server.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: agent.rs  container.rs  container_runtime.rs  docker_runtime.rs  hardware.rs  ipfs.rs  mod.rs  native_runtime.rs  ollama.rs
src/adapters/: adapter-manager.ts  agent.ts  base.ts  index.ts  llm-inference.ts
src/middleware/: auth.ts
src/renderer/: App.tsx  main.tsx
src/renderer/components/: ActivityLog.tsx  CloudGPUPanel.tsx  CodebaseHealth.tsx  ContainersPanel.tsx  CyberButton.tsx  IPFSPanel.tsx  MermaidDiagram.tsx  NodeBlockchain.tsx  OllamaPanel.tsx  RepoConnectionPanel.tsx  WalletButton.tsx  index.ts
src/renderer/config/: api.ts
src/renderer/context/: CredentialContext.tsx  ModuleContext.tsx  Web3Context.tsx
src/renderer/lib/: api-bridge.ts
src/renderer/pages/: Agents.tsx  Dashboard.tsx  Marketplace.tsx  NodeControl.tsx  Settings.tsx  Workspace.tsx  WorkspaceCodebase.tsx  WorkspaceDetail.tsx  index.ts
src/renderer/services/: credential-store.ts
src/renderer/styles/: animations.css  cyberpunk.css
src/security/: index.ts
src/services/: agent-service.ts  appwrite-service.ts  appwrite-setup.ts  cloud-gpu-provider.ts  container-service.ts  elid-service.ts  git-service.ts  model-selector.ts  repo-analyzer.ts  semantic-memory.ts  uaf-service.ts  uaf-types.ts  uaf-views.ts  web3-service.ts  workspace-manager.ts  zlayer-service.ts
src/types/: index.ts
(+3 files in other folders)
