[package]
name = "rhizos-node"
version = "0.1.0"
edition = "2021"
description = "RhizOS Node Agent - Expose your hardware, earn crypto"
license = "MIT"
repository = "https://github.com/modc2/mod"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client/server
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower = "0.5"

# Hardware detection
sysinfo = "0.32"
nvml-wrapper = "0.10"          # NVIDIA GPU detection

# Docker integration
bollard = "0.18"                # Docker API client

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dirs = "5"
toml = "0.8"

# WebSocket for orchestrator connection
tokio-tungstenite = "0.26"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rhizos-node"
path = "src/main.rs"
