[package]
name = "otherthing-node"
version = "1.0.0"
description = "OtherThing Node - Contribute compute to the network"
authors = ["OtherThing"]
license = "MIT"
repository = "https://github.com/server9-dev/otherthing-node"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "blocking"] }
sysinfo = "0.32"
uuid = { version = "1.0", features = ["v4"] }
directories = "5"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
dirs = "5"
urlencoding = "2"

# Axum API server
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Workspace/data persistence
chrono = { version = "0.4", features = ["serde"] }

# Archive extraction for IPFS download
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

# Container runtime support
bollard = { version = "0.17", optional = true }

# Native container runtime (Linux only, requires Rust 1.85+)
[target.'cfg(target_os = "linux")'.dependencies]
libcontainer = { version = "0.5", optional = true, default-features = false, features = ["v2"] }
nix = { version = "0.29", optional = true, features = ["fs", "process", "signal", "user"] }
oci-spec = { version = "0.7", optional = true }

[features]
default = ["container-runtime"]
container-runtime = ["bollard"]
native-containers = ["libcontainer", "nix", "oci-spec"]
